updated main and tested

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "URL = \"https://www.googleapis.com/customsearch/v1\"\n",
     "query = listquery[0]\n",
-    "PARAMS = {'key':'AIzaSyCQN6Zl9aIi1pNf6seBOrw1X50PxoYQV2Q', 'cx':'009131931706956872601:yjwrnbki4sp', 'q':query}\n",
+    "PARAMS = {'key':, 'cx':, 'q':query}\n",
     "r = requests.get(url = URL, params = PARAMS) \n",
     "res = r.json()\n",
     "#URL = \"https://duckduckgo.com/html/?q=x\""
